# desktop_engine

./: meson.build
dbus_lib/: dbus_module_lib.c  dbus_module_lib.h  meson.build
desktop_engine.remote_renderer_windows/: network_client.c
desktop_engine.remote_renderer_windows/ipc/: client.c  server.c
desktop_engine.wayland_server/: .gitignore  build.sh  dbus-availability.sh  dbus-test-ping.sh  dbus-test.sh  dbus-testmodule.sh  debug.sh  meson.build  test.sh
desktop_engine.wayland_server/include/: config.h  logger.h
desktop_engine.wayland_server/include/dbus-ipc/: dbus-core.h  dbus-server.h  dbus-wayland-integration.h  dbus.h
desktop_engine.wayland_server/include/dbus-server/: module.h  server.h
desktop_engine.wayland_server/include/wayland/: buffer.h  shm.h
desktop_engine.wayland_server/protocols/: meson.build
desktop_engine.wayland_server/src/: logger.c  main.c
desktop_engine.wayland_server/src/config/: config.h
desktop_engine.wayland_server/src/dbus-ipc/: dbus-core.c  dbus-module.c  dbus-server.c  dbus-wayland-integration.c  dbus.c
desktop_engine.wayland_server/src/dbus-ipc/modules/test-module/: meson.build  test-client.c  test-module.c  test-module.h  test-module.xml
desktop_engine.wayland_server/src/dbus-modules/test-module/: test-client.c  test-module.c  test-module.h
desktop_engine.wayland_server/src/dbus-server/: server.c
desktop_engine.wayland_server/src/ipc/: network_server.c  network_server.h
desktop_engine.wayland_server/src/logger/: logger.c
desktop_engine.wayland_server/src/server/: compositor.c  compositor.h  server.c  server.h  shm.c  shm.h  xdg.c  xdg.h
desktop_engine.wayland_server/src/server/compositor/: compositor.c  compositor.h  compositor_backup.c  surface_dummies.c
desktop_engine.wayland_server/src/server/wayland/: buffer.c  buffer.h  compositor.c  compositor_surface_dummies.c  shm.c  shm.h
desktop_engine.wayland_server/src/server/xdg-shell/: xdg.h
desktop_engine.wayland_server/src/wayland/: compositor.c  shm.c
desktop_engine.wayland_server/src/xdg-shell/: xdg.c
desktop_engine.wayland_server/test-client/: build.sh  client-pure.c  meson.build
desktop_engine.wayland_server/tests/: dbus-testmodule.sh
desktop_engine.window_server/: .gitignore  meson.build
desktop_engine.window_server/config/: config.c  config.h
desktop_engine.window_server/ipc/: ipc.c
desktop_engine.window_server/logger/: logger.c  logger.h
desktop_engine.window_server/protocols/: meson.build
desktop_engine.window_server/src/: main.c  server.c  server.h
desktop_engine.window_server/src/server/: compositor.c  compositor.h  server.c  server.h  shm.c  shm.h  xdg.c
desktop_engine.window_server/test-client/: client.c  meson.build
desktop_engine.windows_server/: meson.build
desktop_engine.windows_server/config/: config.c  config.h
desktop_engine.windows_server/examples/: logger.conf
desktop_engine.windows_server/include/: server.h
desktop_engine.windows_server/logger/: logger.c  logger.h  logger_config.c  logger_config.h
desktop_engine.windows_server/protocols/: meson.build
desktop_engine.windows_server/src/: main.c  server.c  server.h
desktop_engine.windows_server/test-client/: client.c  main.c
docs/: Remote rendering scheme.canvas  create_module.md
include/: logger.h
include/dbus-ipc/: dbus-core.h  dbus-module.h
include/dbus-server/: module-lib.h  module.h  server.h
include/dbus-server/modules/: buffer_module.h
include/wayland/: buffer.h  compositor.h  server.h  shm.h
include/xdg-shell/: popup.h  positioner.h  surface.h  toplevel.h  wm_base.h  xdg.h
notes/desktop-engine/: readme.md  Смысл и устройство проекта.md
notes/desktop-engine/.obsidian/: workspace.json
notes/desktop-engine/Architecture/: Main scheme.canvas  Root.canvas
notes/desktop-engine/Architecture/communication/: DBUS.md  Untitled.md
notes/desktop-engine/Architecture/window_server/: window_server.md
src/: config.c  logger.c  main.c
src/dbus-ipc/: dbus-module.c  dbus-wayland-integration.c
src/dbus-server/: module-lib.c  module.c  server.c
src/dbus-server/modules/: buffer_module.c
src/wayland/: buffer.c  compositor.c  compositor_surface.c  compositor_surface_dummies.c  server.c  shm.c
src/xdg-shell/: surface.c  toplevel.c  wm_base.c
test-client/: client-pure.c  client-xdg.c  meson.build
test-renderer/: buffer_monitor.c  meson.build
test-renderer/include/: buffer_fetcher.h  buffer_mgr.h  macro.h  vulkan.h  window.h
test-renderer/shaders/: fragment.frag  meson.build  vertex.vert
test-renderer/src/: buffer_fetcher.c  buffer_mgr.c  main.c  vulkan.c  vulkan_texture.c  window.c
tests/: dbus-availability.sh
